...
    <string name="notification_channel_default__name">Sound Playback</string>
    <string name="add_to_app_shortcuts">Add to app shortcuts</string>
    <string name="remove_from_app_shortcuts">Remove from app shortcuts</string>
    <string name="app_shortcut_removed">Preset has been removed from app shortcuts!</string>
    <string name="app_shortcut_created">Preset has been added to app shortcuts!</string>
    <string name="app_shortcut_creation_failed">Failed to add the preset to app shortcuts!</string>
    <string name="settings">Settings</string>
    <string name="presets_as_home_screen">Presets as home screen</string>
    <string name="appearance">Appearance</string>
    <string name="sound_fade_in_duration">Sound fade-in duration</string>
    <string name="sound_fade_in_duration_summary">Time duration in seconds for fading-in sounds</string>
    <string name="sound_fade_out_duration">Sound fade-out duration</string>
    <string name="sound_fade_out_duration_summary">Time duration in seconds for fading-out sounds</string>
...
    <string name="trial_period">Trial Period: %1$s</string>
    <plurals name="n_days">
        <item quantity="one">%1$d day</item>
        <item quantity="other">%1$d days</item>
    </plurals>
    <string name="sound_is_premium">Upgrade to Noice Premium to access this sound.</string>
    <string name="alarms">Alarms</string>
    <string name="add_alarm">Add an Alarm</string>
    <string name="no_alarms">No Alarms</string>
    <string name="no_alarms_description">Add a new alarm by tapping the \"+\" button!</string>
    <string name="alarm_permission_rationale_title">Allow Noice to schedule alarms</string>
    <string name="alarm_permission_rationale_description">We need additional access to schedule alarms on your device. Please enable the **Alarms &amp; reminders** permission for Noice in its app info page inside your device\'s system settings.</string>
    <string name="post_notifications_permission_rationale_title">Allow Noice to show notifications</string>
    <string name="post_notifications_permission_rationale_description">Please permit Noice to show notifications for alarms to be able to ring at their scheduled time.</string>
    <string name="proceed">Proceed</string>
    <string name="alarm_post_notifications_permission_denied">Noice cannot ring alarms without the permission to show notifications!</string>
    <string name="add_label">Add label</string>
...
    <string name="tuesday_initial">T</string>
    <string name="wednesday_initial">W</string>
    <string name="thursday_initial">T</string>
    <string name="friday_initial">F</string>
    <string name="saturday_initial">S</string>
    <string name="vibrate">Vibrate</string>
    <string name="not_scheduled">Not scheduled</string>
    <string name="edit_label">Edit Label</string>
    <string name="notification_channel_alarm_primary__name">Alarms</string>
    <string name="notification_channel_alarm_primary__description">Notifications shown when a scheduled alarm fires.</string>
    <string name="notification_channel_alarm_priming__name">Alarm Priming</string>
    <string name="notification_channel_alarm_priming__description">Notifications shown when preparing to fire a scheduled alarm.</string>
    <string name="alarm">Alarm</string>
...
