...
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:animateLayoutChanges="true">

  <LinearLayout
    android:id="@+id/empty_list_indicator"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/root_layout_padding"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
...
      android:textAppearance="?attr/textAppearanceBodyMedium"
      android:textColor="?android:attr/textColorHint" />

  </LinearLayout>

  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:paddingTop="8dp"
    android:paddingBottom="72dp"
    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

  <com.google.android.material.floatingactionbutton.FloatingActionButton
    android:id="@+id/add_alarm_button"
    style="?attr/floatingActionButtonPrimaryStyle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/root_layout_padding"
    android:contentDescription="@string/add_alarm"
    android:src="@drawable/round_add_24"
...
