...
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:visibility="gone" />

    <Button
      android:id="@+id/positive"
      style="?attr/buttonStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:visibility="gone" />

...
